# RockstarAdminTool

./: CMakeLists.txt  readme.md
source/: main.c
source/game_freezer/: game_freezer.c  game_freezer.h
source/gui/: gui.c  gui.h
source/hotkey_handler/: hotkey_handler.c  hotkey_handler.h
source/project_link_executor/: project_link_executor.c  project_link_executor.h
source/save_server_blocker/: save_server_blocker.c  save_server_blocker.h
source/session_desynchronizer/: session_desynchronizer.c  session_desynchronizer.h
